cluster/core/traefik/error-pages/error-pages-middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-error-pages-middleware
  namespace: traefik
spec:
  errors:
    status:
      - "400-599"
    query: /{status}.html
    service:
      name: traefik-error-pages
      port: 8080
