cluster/core/traefik/error-pages/error-pages-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-error-pages
  namespace: traefik
spec:
  selector:
    name: traefik-error-pages
  ports:
  - name: http
    port: 8080
    protocol: TCP
  type: ClusterIP
