cluster/core/traefik/error-pages/error-pages-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-error-pages
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: HostRegexp(`{host:.+}`)
      priority: 1
      services:
        - kind: Service
          name: traefik-error-pages
          port: 80
  tls:
    secretName: wildcard-letsencrypt-production-certificate
